2008-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: fixed type parameter duplication.

2008-10-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomField.cs:
	* MonoDevelop.Projects.Dom/DomEvent.cs:
	* MonoDevelop.Projects.Dom/DomUsing.cs:
	* MonoDevelop.Projects.Dom/Namespace.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/DomProperty.cs:
	* MonoDevelop.Projects.Dom/IDomVisitor.cs:
	* MonoDevelop.Projects.Dom/DomAttribute.cs:
	* MonoDevelop.Projects.Dom/DomParameter.cs:
	* MonoDevelop.Projects.Dom/LocalVariable.cs:
	* MonoDevelop.Projects.Dom/DomReturnType.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs:
	* MonoDevelop.Projects.Dom/CompilationUnit.cs:
	* MonoDevelop.Projects.Dom.Output/Ambience.cs: Fix spelling.

2008-10-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: fixed regression bug.

2008-10-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: Changed inner type namespaces.

2008-10-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: exposed
	GetAssemblyInfo method.

2008-10-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomReturnType.cs: domreturntype now throws
	  null argument exception on null types. 

2008-10-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/DotNetProject.cs: Fix copying app.config.

2008-10-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/Project.cs: Don't try to copy a file to itself.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomType.cs: fixed possible nullreference.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
	  MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Ensured that sourceprojectdom is set.
